# University_recommendation

./: LICENSE  README.md  admin.py  auth.py  embeddings.ipynb  main.py  pyproject.toml  recommendation.py  schema.py  stream.py  validation.py
streamlit_app/: streamlit_app.py
